fix: fix paths issue and fron pages glitches

--- a/slidev-workspace.yaml
+++ b/slidev-workspace.yaml
@@ -2,5 +2,5 @@ baseUrl: /easy-houdini
 
 hero:
   title: Домашки Easy Houdini
-  description: Домашние задания к курсу Easy Houdini
+  description: Домашние задания к курсу Easy Houdini Артема Кожемякина
 
